# background-remover

./: .gitignore  DEPLOYMENT.md  Dockerfile  GITHUB_SECRETS.md  README.md  VPS_DEPLOYMENT.md  api.py  cli.py  deploy.sh  fly.toml  main.py  nixpacks.toml  pyproject.toml  quick-set-secrets.sh  remover.py  render.yaml  set-secrets-commands.txt  set-secrets.sh
.github/workflows/: ci.yml  deploy-ssh.yml  deploy.yml  docker.yml
deploy/: background-remover.service  nginx-background-remover.conf
